[metadata]
name = fs.proxy
version = 0.1.0
author = Martin Larralde
author-email = martin.larralde@ens-cachan.fr
home-page = https://github.com/althonos/fs.proxy
description = Miscellaneous proxy filesystems for Pyfilesystem2
long-description = file: README.txt
license = MIT
platform = any
requires-dist = setuptools
keywords = proxy, filesystem, Pyfilesystem2
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Filesystems

[aliases]
test = nosetests

[nosetests]
verbosity = 1
with-coverage = 1
cover-package = fs.proxy
with-doctest = 1
doctest-extension = rst

[coverage:report]
show_missing = True
exclude_lines =
	pragma: no cover
	@abc.abstractmethod
	@abc.abstractproperty
	raise NotImplementedError
	return NotImplemented
	if six.PY3
	if six.PY2

[options]
zip_safe = True
include_package_data = True
packages = fs.proxy
install_requires = six; psutil; fs >= 2.0.4
test_suite = tests
tests_require =
	setuptools
	nose
	rednose
	nose-cov
	coverage
	codecov
	toolz
	mock ; python_version < '3.4'

[options.packages.find]
exclude = tests, tests.*

[options.package_data]
* = COPYING
