[metadata]
name = fs.proxy
version = 0.1.0
author = Martin Larralde
author-email = martin.larralde@ens-cachan.fr
home-page = https://github.com/althonos/fs.proxy
description = Miscellaneous proxy filesystems for Pyfilesystem2
long-description = file: README.txt
license = MIT
platform = any
requires-dist = setuptools
keywords = proxy, filesystem, Pyfilesystem2
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Filesystems

[options]
zip_safe = true
include_package_data = true
packages = fs.proxy
test_suite = tests
install_requires =
	fs >= 2.0.4
	six
	psutil
tests_require =
	setuptools
	nose
	rednose
	nose-cov
	coverage
	codecov
	toolz
	mock ; python_version < '3.4'

[aliases]
test = nosetests

[bdist_wheel]
universal = true

[coverage:report]
show_missing = true
exclude_lines =
	pragma: no cover
	@abc.abstractmethod
	@abc.abstractproperty
	raise NotImplementedError
	return NotImplemented
	if six.PY3
	if six.PY2

[nosetests]
verbosity = 1
with-coverage = true
cover-package = fs.proxy
with-doctest = true
doctest-extension = rst

[pydocstyle]
inherit = false
ignore = D100,D200,D203,D213,D406,D407
