[metadata]
name = fs.proxy
version = 0.1.3
author = Martin Larralde
author-email = martin.larralde@ens-cachan.fr
home-page = https://github.com/althonos/fs.proxy
description = Miscellaneous proxy filesystems for Pyfilesystem2
long-description = file: README.rst
license = MIT
platform = any
keywords = proxy, filesystem, Pyfilesystem2
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Filesystems

[options]
zip_safe = true
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = fs.proxy
test_suite = tests
install_requires =
  fs ~=2.0.4
  six ~=1.10
  psutil ~=2.0
setup_require=
  setuptools
  green
  docutils
  Pygments
tests_require =
  green
  toolz
  coverage
  mock ; python_version < '3.4'

[aliases]
test = green

[bdist_wheel]
universal = true

[coverage:report]
show_missing = true
exclude_lines =
	pragma: no cover
	@abc.abstractmethod
	@abc.abstractproperty
	raise NotImplementedError
	return NotImplemented
	if six.PY3
	if six.PY2

[nosetests]
verbosity = 1
with-coverage = true
cover-package = fs.proxy
cover-xml = true
with-doctest = true
doctest-extension = .rst
rednose = true

[pydocstyle]
inherit = false
ignore = D100,D200,D203,D213,D406,D407

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true
